--- a/packages/components/tree/style/themes/default.variable.less
+++ b/packages/components/tree/style/themes/default.variable.less
@@ -1,5 +1,3 @@
-@tree-node-prefix: ~'@{tree-prefix}-node';
-
 @tree-font-size: @font-size-md;
 
 @tree-icon-font-size: @font-size-lg;
